send connection request working
